-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8216217 | 13 | Erik Österlund | P4 | Resolved | Fixed | team |
In VtableStubs::find_stub we first perform a lookup in the table to check for already created stubs under the VtableStubs_lock, then if not found we create a new stub without the lock held, and then insert it under the VtableStubs_lock without checking for entries inserted between the lookup and insertion.
If the VtableStubs_lock is to protect the table (which is the intention), the lock should not be unlocked before lookup and insert.
If the VtableStubs_lock is to protect the table (which is the intention), the lock should not be unlocked before lookup and insert.
- backported by
-
JDK-8216217 VtableStubs::find_stub is not appropriately protected by VtableStubs_lock
-
- Resolved
-