8215206: VtableStubs::find_stub is not appropriately protected by VtableStubs_lock

Reviewed-by: thartmann, pliden